samples/invalid/eval/double_object_decl.g
language g0
object foo
object foo with
  msg = "Hello, World!"

asm.result = foo.msg
